[tool.poetry]
name = "dayone2md"
version = "0.1.0"
description = ""
authors = ["yu-s <tuxedocat@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
PyYAML = "^6.0"
maya = "^0.6.1"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
black = "^21.12b0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
